--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
     <div id="score">Skor: 0</div>
-    <script type="module" src="game.js"></script>
+    <script type="module" src="/game.js"></script>
 </body>
 
 </html>
