--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 
 <body>
     <div id="score">Skor: 0</div>
+       <div style="position: absolute; top: 60px; left: 20px; display: flex; flex-direction: column; z-index:10;">
+        <button id="goToWorldButton" style="margin-bottom: 5px; padding: 5px; background-color: #87CEEB; color: black; border: none; cursor: pointer;">Dünya</button>
+        <button id="goToMarsButton" style="margin-bottom: 5px; padding: 5px; background-color: #FF7F50; color: white; border: none; cursor: pointer;">Mars</button>
+        <button id="goToEuropaButton" style="margin-bottom: 5px; padding: 5px; background-color: #ADD8E6; color: black; border: none; cursor: pointer;">Europa</button>
+        <button id="goToBlackholeButton" style="padding: 5px; background-color: #483D8B; color: white; border: none; cursor: pointer;">Kara Delik G.</button>
+        </div>
     <script type="module" src="/game.js"></script>
 </body>
 
